made modular structure with dark theme

--- a/_includes/footer-custom.html
+++ b/_includes/footer-custom.html
@@ -1,2 +1,4 @@
-<script src="{{ '/assets/js/theme-toggle.js' | relative_url }}"></script>
+{%- comment -%}
+  Theme toggle script is loaded once via `_includes/head-custom.html`.
+{%- endcomment -%}
 
