--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -184,5 +184,7 @@ layout: default
 }
 </style>
 
-{% include theme-script.html %}
+{%- comment -%}
+  Theme toggle script is loaded once via `_includes/head-custom.html`.
+{%- endcomment -%}
 
